--- a/python_archive/ipython/test.ipynb
+++ b/python_archive/ipython/test.ipynb
@@ -2,259 +2,108 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From <ipython-input-2-b15f60b71b63>:49: initialize_all_variables (from tensorflow.python.ops.variables) is deprecated and will be removed after 2017-03-02.\n",
+      "Instructions for updating:\n",
+      "Use `tf.global_variables_initializer` instead.\n",
+      "step :  0\n",
+      "loss :  0.61615\n",
+      "acc :  0.0\n",
+      "step :  100\n",
+      "loss :  0.370886\n",
+      "acc :  0.0\n",
+      "step :  200\n",
+      "loss :  0.299476\n",
+      "acc :  0.0\n",
+      "step :  300\n",
+      "loss :  0.249887\n",
+      "acc :  0.0\n",
+      "step :  400\n",
+      "loss :  0.209077\n",
+      "acc :  0.0\n",
+      "step :  500\n",
+      "loss :  0.175935\n",
+      "acc :  0.0\n",
+      "step :  600\n",
+      "loss :  0.150774\n",
+      "acc :  0.0\n",
+      "step :  700\n",
+      "loss :  0.132192\n",
+      "acc :  0.0\n",
+      "step :  800\n",
+      "loss :  0.118351\n",
+      "acc :  0.0\n",
+      "step :  900\n",
+      "loss :  0.107777\n",
+      "acc :  0.0\n"
+     ]
+    }
+   ],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
     "import tensorflow as tf\n",
-    "import scipy.misc\n",
-    "import scipy.io\n",
-    "import random\n",
     "\n",
-    "#-------------------------------------------------------------------------------\n",
-    "# train\n",
-    "train_images = []\n",
-    "tlabels = []\n",
+    "input_data = [[1,5,3,7,8,10,12],\n",
+    "                    [5,8,10,3,9,7,1]]\n",
+    "label_data = [[0,0,0,1,0],\n",
+    "                     [0,0,1,0,0]]\n",
     "\n",
-    "for num in range(1,701):\n",
-    "    train_images.append(scipy.misc.imread('train_image/train_'+ str(num)+'.bmp'))\n",
+    "# 좋은 코드의 예\n",
+    "INPUT_SIZE = 7\n",
+    "HIDDEN1_SIZE = 10\n",
+    "HIDDEN2_SIZE = 8\n",
+    "CLASSES = 5\n",
+    "Learning_Rate = 0.05\n",
     "\n",
+    "# 행렬인 데이터들을 텐서로 만들어주기 위해 placeholder를 이용해 선언\n",
+    "x = tf.placeholder( tf.float32, shape = [None, INPUT_SIZE])\n",
+    "y_ = tf.placeholder( tf.float32, shape = [None,CLASSES] )\n",
+    "feed_dict = {x: input_data, y_: label_data}\n",
     "\n",
-    "with open(\"train_label.txt\") as f:\n",
-    "    line = [line.rstrip() for line in f]\n",
-    "    tlabels.append(line)\n",
+    "# hidden layer의 weight와 bias 선언\n",
+    "W_h1 = tf.Variable( tf.truncated_normal(shape=[INPUT_SIZE, HIDDEN1_SIZE]), dtype=tf.float32)\n",
+    "b_h1 = tf.Variable( tf.zeros([HIDDEN1_SIZE], dtype = tf.float32))\n",
     "\n",
-    "train_images = np.array(train_images)\n",
-    "train_images = train_images.reshape(700, 2200, )\n",
+    "W_h2 = tf.Variable( tf.truncated_normal(shape=[HIDDEN1_SIZE, HIDDEN2_SIZE]), dtype=tf.float32)\n",
+    "b_h2 = tf.Variable( tf.zeros([HIDDEN2_SIZE], dtype = tf.float32))\n",
     "\n",
-    "tlabels = np.array(tlabels)     # tlabels = (1,700)\n",
-    "tlabels = tlabels.reshape(700,1)\n",
+    "w_o = tf.Variable( tf.truncated_normal(shape=[HIDDEN2_SIZE, CLASSES]), dtype=tf.float32)\n",
+    "b_o = tf.Variable( tf.zeros([CLASSES], dtype = tf.float32))\n",
     "\n",
-    "train_labels  = np.array(np.zeros(70000).reshape(700,100))\n",
-    "for num in range(0,700):\n",
-    "    train_labels[num][int(tlabels[num][0]) - 1] = 1\n",
+    "# 변수 선언 바로 밑에 saver 선언해 저장할 weight를 넣는다.\n",
+    "param_list = [W_h1, b_h1, W_h2, b_h2, w_o, b_o]\n",
+    "saver = tf.train.Saver(param_list)\n",
     "\n",
-    "#-----------------------------------------------------------------\n",
-    "# test\n",
-    "test_images = []\n",
-    "testlabels = []\n",
+    "# layer안의 계산\n",
+    "hidden1 = tf.sigmoid(tf.matmul( x, W_h1) + b_h1)\n",
+    "hidden2 = tf.sigmoid(tf.matmul( hidden1 , W_h2) + b_h2)\n",
+    "y = tf.sigmoid(tf.matmul( hidden2, w_o) + b_o)\n",
     "\n",
-    "for num in range(1,701):\n",
-    "    test_images.append(scipy.misc.imread('test_image/test_'+ str(num)+'.bmp'))\n",
+    "# 정확도를 위한 cost와 정확도를 높이기 위해 train 선언\n",
+    "cost = tf.reduce_mean(-y_*tf.log(y)-(1-y)*tf.log(1-y))\n",
+    "train = tf.train.GradientDescentOptimizer(Learning_Rate).minimize(cost)\n",
     "\n",
+    "# accuracy를 체크\n",
+    "comp_pred = tf.equal(tf.arg_max(y, 1), tf.arg_max(y_, 1))\n",
+    "accuracy = tf.reduce_mean(tf.cast(comp_pred, dtype=tf.float32))\n",
     "\n",
-    "with open(\"test_label.txt\") as f:\n",
-    "    line = [line.rstrip() for line in f]\n",
-    "    testlabels.append(line)\n",
-    "\n",
-    "\n",
-    "test_images = np.array(test_images)\n",
-    "test_images = test_images.reshape(700, 2200, )\n",
-    "\n",
-    "testlabels = np.array(testlabels)     # tlabels = (1,700)\n",
-    "testlabels = testlabels.reshape(700,1)\n",
-    "\n",
-    "test_labels  = np.array(np.zeros(70000).reshape(700,100))\n",
-    "for num in range(0,700):\n",
-    "    test_labels[num][int(testlabels[num][0]) - 1] = 1\n",
-    "\n",
-    "\n",
-    "#------------------------------------------------------------------\n",
-    "\n",
-    "train_images = train_images / 255.\n",
-    "test_images = test_images / 255.\n",
-    "\n",
-    "_num_examples = 700\n",
-    "_index_in_epoch = 0\n",
-    "_images = train_images\n",
-    "_labels = train_labels\n",
-    "_epochs_completed = 0\n",
-    "\n",
-    "def next_batch(batch_size):\n",
-    "    \"\"\"Return the next `batch_size` examples from this data set.\"\"\"\n",
-    "    global _index_in_epoch\n",
-    "    global _images\n",
-    "    global _labels\n",
-    "    global _epochs_completed\n",
-    "\n",
-    "    start = _index_in_epoch\n",
-    "    _index_in_epoch += batch_size\n",
-    "\n",
-    "    if _index_in_epoch > _num_examples:\n",
-    "      # Finished epoch\n",
-    "      _epochs_completed += 1\n",
-    "\n",
-    "      # Shuffle the data\n",
-    "      perm = np.arange(_num_examples)\n",
-    "      np.random.shuffle(perm)\n",
-    "      _images = _images[perm]\n",
-    "      _labels = _labels[perm]\n",
-    "\n",
-    "      # Start next epoch\n",
-    "      start = 0\n",
-    "      _index_in_epoch = batch_size\n",
-    "      assert batch_size <= _num_examples\n",
-    "\n",
-    "    end = _index_in_epoch\n",
-    "    return _images[start:end], _labels[start:end]\n",
-    "\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "x = tf.placeholder(\"float32\", [None, 2200]) # mnist data image of shape 55 x 40 = 2200\n",
-    "y = tf.placeholder(\"float32\", [None, 100]) \n",
-    "\n",
-    "W = tf.Variable(tf.zeros([2200,100]))\n",
-    "b = tf.Variable(tf.zeros([100]))\n",
-    "yy = tf.nn.softmax(tf.matmul(x, W) + b)\n",
-    "\n",
-    "\n",
-    "\n",
-    "#cost = tf.reduce_mean(-tf.reduce_sum(y * tf.log(cost), reduction_indices = 1))\n",
-    "cost = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(labels=y, logits=yy))\n",
-    "\n",
-    "learning_rate = 0.5\n",
-    "optimizer = tf.train.GradientDescentOptimizer(learning_rate).minimize(cost)\n",
-    "\n",
-    "init = tf.global_variables_initializer()\n",
+    "# 이 때까지 그래프를 그렸다면 이제 세션에 넣고 계산\n",
     "sess = tf.Session()\n",
+    "init = tf.initialize_all_variables()\n",
     "sess.run(init)\n",
-    "\n",
-    "trainig_epochs = 10000\n",
-    "display_step = 500\n",
-    "batch_size = 50\n",
-    "\n"
+    "for i in range(1000):\n",
+    "    _, loss,acc = sess.run([train,cost, accuracy] , feed_dict = feed_dict)\n",
+    "    if i % 100 == 0:\n",
+    "        saver.save(sess, './model.ckpt')\n",
+    "        print(\"step : \",i)\n",
+    "        print(\"loss : \",loss)\n",
+    "        print(\"acc : \",acc) "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 0001 cost= 4.604614905\n",
-      "Epoch: 0501 cost= 4.301261357\n",
-      "Epoch: 1001 cost= 4.240906034\n",
-      "Epoch: 1501 cost= 4.200702054\n",
-      "Epoch: 2001 cost= 4.161071096\n",
-      "Epoch: 2501 cost= 4.110833747\n",
-      "Epoch: 3001 cost= 4.100320952\n",
-      "Epoch: 3501 cost= 4.060961298\n",
-      "Epoch: 4001 cost= 4.060320105\n",
-      "Epoch: 4501 cost= 4.031069466\n",
-      "Epoch: 5001 cost= 4.011517712\n",
-      "Epoch: 5501 cost= 3.981206911\n",
-      "Epoch: 6001 cost= 3.962731140\n",
-      "Epoch: 6501 cost= 3.941539901\n",
-      "Epoch: 7001 cost= 3.931059650\n",
-      "Epoch: 7501 cost= 3.921033519\n",
-      "Epoch: 8001 cost= 3.901943650\n",
-      "Epoch: 8501 cost= 3.901177781\n",
-      "Epoch: 9001 cost= 3.881349495\n",
-      "Epoch: 9501 cost= 3.869033882\n",
-      "Optimization Finished\n"
-     ]
-    }
-   ],
-   "source": [
-    "# training_epoch 횟수만큼 반복해서 학습한다\n",
-    "for epoch in range(trainig_epochs):\n",
-    "\tavg_cost = 0.\n",
-    "\ttotal_batch = int(_num_examples/batch_size)\n",
-    "\n",
-    "\tfor i  in range(total_batch):\n",
-    "\t\tbatch_xs, batch_ys = next_batch(batch_size)\n",
-    "\t\t#print(batch_xs[0])\n",
-    "\t\t#print(batch_ys[0])\n",
-    "\t\tsess.run(optimizer, feed_dict={x: batch_xs, y:batch_ys})\n",
-    "\t\tavg_cost += sess.run(cost, feed_dict={x: batch_xs, y:batch_ys}) / total_batch\n",
-    "\n",
-    "\tif epoch % display_step == 0:\n",
-    "\t\tprint (\"Epoch:\", '%04d' % (epoch +1) , \"cost=\", \"{:.9f}\".format(avg_cost))\n",
-    "\n",
-    "print (\"Optimization Finished\")\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.764286\n"
-     ]
-    }
-   ],
-   "source": [
-    "# 정답률을 계산한다  yy  vs  y\n",
-    "correct_prediction = tf.equal(tf.argmax(yy, 1), tf.argmax(y, 1))\n",
-    "accuracy = tf.reduce_mean(tf.cast(correct_prediction, tf.float32))\n",
-    "print(sess.run(accuracy, feed_dict= {x: test_images, y: test_labels}))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Label:  [9]\n",
-      "Prediction:  [9]\n"
-     ]
-    },
-    {
-     "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAMMAAAD8CAYAAADKUxDSAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAFHFJREFUeJztnctuHUXXhnc4nwmOwU7ICceBQEAQCRFAyhAygQF3wNVw\nCVwCgimRGDEAIWbAhEMggoBjcBxiAiaACcd/shR1PfHf7+6YbFv6nmfkpd67u7q2l2q9VatWbfv3\n339HIjIaXbfZDRDZKugMIoXOIFLoDCKFziBS6Awihc4gUugMIoXOIFLcMMmHTU1NNcvdf/zxR3P9\nn3/+aey///679/rNN9/c2Nu3b2/s22+/vbFvuummxr7tttt6v8/7//XXX419ww1t9/Hz1113Xa99\n6dKlxl5YWGjs77777vLf27Zta67dcccdjX333Xc3Nt+dbbv++usbm+/C77OtFy9e7LWXl5cbe2Vl\npfd+/K35vuy7G2+8sbe9/F+5cOFCe8N1cGQQKXQGkUJnECkmqhkYc5OkEW655ZbGvuuuuxr7zjvv\nbGzG1fw+ryeNQXidcTltxsHUTPz8rbfeevnv33//vbnGmPmee+5p7KSfkqboPns0uvJd+Vv+8ssv\njU1N8NFHHzX2J5980tjUHMymTn1L+7fffhsNxZFBpNAZRAqdQaSYqGbgXDHjTtqMa6kJ0joBNQHj\nYMaZvB81Bj/PODppDJI0x44dOy7//eeffzbXuE7AvuG9qVe4rpDenTY/T73H+8/NzTU29dLi4mJj\nr62t9d6fvy3bw++PgyODSKEziBQ6g0gxUc3AdQNqhBRDMy7kOgM1RlpXSHEw5/KpORi3p3wfvj+v\n8/tdjcXPUiOwbZynT2s4Sf8kDUGbGmfv3r2N/eKLLzb2iRMnGvvcuXONzXUWaiDC/hkHRwaRQmcQ\nKXQGkWJTc5MYx6Z8kxTj8zrjxqRBqBEYNzNu5/W+mH89eJ1xcLd9Sb/w3XlvxvDUFHw2n8f7p77h\n9/m8xx9/vLGZm/TOO+809k8//dTYq6urjc3/Lf4W4+DIIFLoDCKFziBSTFQzMB+FcSTjPMadQ2P8\npDn4/ZR7xHWMFPMT3p9z/eyfbvvSGgpj9qHV1dMe46Qh+P2kIfhbHjt2rLHZl++//35j//rrr43N\nXKT0W6yHI4NIoTOIFDqDSDFRzcB1BbLRfJkU8zOOTXWPGOeyfYxLk00YZ/e1P+kh3ottHbrmsdG+\n5P1SrhDv//TTTzf2Dz/80Njnz59vbDWDyH+IziBS6AwixUQ1A2FcmdYZ0rpCyg2inXL8aQ/NPeJc\nP9cR0n6G7vulXBvGyGw725LWWPg86jPmRvF+QzUFYe3YQ4cONXa3Du1odOV+h6s5xdaRQaTQGUQK\nnUGkmKhmYFyb9hCnz6d8GMaNzOknqTYR4fOYU5/WJdh+tpf5N32wraktvM62pTwqkmpGDe1LahTW\nkp2ZmWnsCxcuNHaq67sejgwihc4gUugMIsVENUPSBCnmH5rbxHl9Pp/3T3FvmrseegZdun/3+2mN\ngnqHbeE6APuez056i+cfpN8yncHGdQL+VqyRtWfPnsbmugM1xDg4MogUOoNIoTOIFJt6PkOCcSjj\nYM4lp3OlUy4T7580B88x4/0ZJw/NL+rG3YzB+Vn2RdpfnvqC9OmZ0ejKvqJNzZHWLUjKjaKm4H6H\ncXBkECl0BpFCZxAptpRmYByb9vUyDk1z8Yzh036KlO/D+xG+D+NcMqReKPUN7Y3WeU37GdJek9S+\nlBtFm32XzrDjWRzj4MggUugMIoXOIFJsat2kVLco5fsPrQ2U9jOQtF8ixdHpTIOUD9R93tAYn89K\ndWqH5hYl/TN070baw83nT09PNzZznYauY4xGjgwil9EZRAqdQaTY1HOgUwye9jfQZk582l/A77Ne\nJ7/P9qVz0FKdp0RXQ6U1l6QBUt3YVLOK7572gvC345ltqW+THuQ6AjUD90iPgyODSKEziBSbWiom\nlT3n0M2hk2XKWVqFQ31aoud1LvkzTXj79u29z+Pn07ZTPq/7+TStnFJH0tQlQ0ymtnz11VeNzTCH\nU7e02Rc8ypZ9z/fhVC77fmpqqrE//fTT0VAcGUQKnUGk0BlEiolqBk63cTqMcSHjUm6zXFlZaWzG\noXweSeUbOd3HuHd2draxH3744cZ+4IEHej9Puy+lIJWCoSagnuLU5sLCQq999uzZxmZfE6ZHsBzk\nM88809jsG/4W7Gv+ltRXnEpNv/16ODKIFDqDSKEziBQT1QxcV7j33nsbm/P0jFuXl5cbm3Ph/D6v\np7l3cunSpcb+/vvvG5slDFnicPfu3Y39xBNPNPYjjzzS2PPz843dfR/2HWNs6in23QcffNDY3377\nbWOztMrPP//c2Gkb5uLiYmNTv3GdZGlpqbHZfmqKY8eONTb7g/pr7969o6E4MogUOoNIoTOIFJuq\nGTg3zfwYxsWMO3k8asqPSWXRGbdSE3CunxqEZdq/+eabxmY+ENcKOHd+//33X/6b78J5dD6LNvUP\nc3nYN7t27WpszuNTD7HtKUWbmoAa5syZM41NDXTfffc1Nn9LrquMgyODSKEziBQ6g0gxUc3AuJFx\nHuNaXqfmYP4L40jGxXw+4dw649Qff/yxsakhuB+D7aXmoUbh/buais/q6onR6MptkZznZ1/xOtvC\n+7EveYwUNQY1DteUqPeoOagXmRvFvqT+TL/1ejgyiBQ6g0ihM4gUE9UMjCNTjM04lznu3DfLfJnV\n1dXG/vrrr3uvM25O6xxsD98nlZbhugM1U1fDsO94b8bsXCPhnuCTJ082Nt+dNt+d+uzo0aONzXWE\ntD+c6xb8PPsm7XegphoHRwaRQmcQKXQGkWKimoExftoTncqiM5fps88+a2zuP0gwhmdtHs7NHz9+\nvLE//vjjxmbuEtcKuD+jT8MkPcM1EtY5YtsZ87/00kuN/eabbzY2+5K5QwcPHvx/2z4aXblmw1wk\nfv/BBx9sbP42XJcgXNcYB0cGkUJnECl0BpFiopohHW1LTcC59VQflPkrrB306KOPNjbn5t9+++3G\nZgy/c+fOxmYcfO7cuVEfqew61wY4996FGoHvyrZRM3B/OPdiHDlypLFff/31xuZ+hRdeeKGxWSv1\n1VdfbWyuE/D51I/Um+moX+YqjYMjg0ihM4gUOoNIsam5SczVScevJhhXUoNw3p9xNvNpOJedcu73\n79/f2NQI1DTUPIyzuzb7IvXd4cOHe68zT+uLL75obP5WTz311KgP9iXzyp577rnGZl0j5hJxjYft\n529JXGcQ2QA6g0ihM4gUm5qbxDgwHW1LGJPPzc01NmNy7pfgXPaBAwd628v2ME5OcSxzk5Im6vZP\nOsONbWXuEfdXJ71C/ZQ0A+sq7du3r7EPHTrU2FwXIFx3SHua2Zfcsz0Ojgwihc4gUugMIsVENQP3\nKCe475VxZtoXzBifGoWfZy0fagzm81ADMLeIewAYlzPO7VtnYFvZNvYN9xOw7/muvD/XVKhJ0vkI\njNmZ50W9lfQi1yHYd8xV4vuNgyODSKEziBQ6g0ixqeczpD3NhHEi4+C0bsHnp3OeeT/O1TNO5zoD\n3y/lF5Hu91OMzHdjbg/3GPNdeZ5B0mO0qZ+ol5jHlfQf34dwb8zQ6+vhyCBS6Awihc4gUkxUMzCG\n57w6SblEjFuHxpHp82tra43NdQbC9qYz4Aj7o6sZGGOnPcDUBLyezrNjbhC/T73DvuF1Po96jzbb\nT/3F+yf9Ng6ODCKFziBS6AwixUQ1A+PSVGOfcWKat6eGYBzKuDLVDmJcnvJnUhyb6oUyn6arafhd\n6hle57tzHp/fZ1uoX9hX6Zxn6jE+f8eOHb3f52/Nvub7knR9PRwZRAqdQaTQGUSKiWoG1gdNOeop\n1yjVamXcmubG01x+2pPNdQbm7LM9jJuZT9R9Hz6bbeOaBq+zjhA1BXOT2Je8f9Io3P+Qzt8bsh98\nnOts7zg4MogUOoNIoTOIFBPVDGluPOWfkFR7h/kpjEtTblJa9+A6Cc+U4/txHYH1SPvm+tPZFVwX\nOH/+fG9bWNeIcP95qpOb9qrw+tA6ukkvEuq1cXBkECl0BpFCZxApJqoZmPvDPc8pjkw59Zxb5/2G\nrkuQ9Dzm17BeKdvDuXeeMdetl8q28bN8F7aFZ7rRTns9+O7UKNQU/D7bN5SkH/lbpPP11sORQaTQ\nGUQKnUGkmKhmYNzIXCXW50y5SSl3KNUxSvuCGRczDqYGYq5R2jPNuX+2t6uphu5n4LNTrdS0V6Nv\nf/ZodGWu0UY1wlCoPxcWFgbfw5FBpNAZRAqdQaSYqGbguV6MewnjYGqEVBuH36edzjygRkj5P8zn\nYW1W5suw/uj8/Hxjd+fuqW+ot86cOdPYX375ZWMPPWONfZX2m//XGiHtHaGeZH9w3WMcHBlECp1B\npNAZRIpNPQc6zcOnnPWUK8R9sNQA6f6EMf/Kykpjsy4U83/SGXBLS0uN3d0TzRiYMT1zldJeDPY9\n9VLSW2kNKOUSkaQR0ue55sO9IuPgyCBS6Awihc4gUkxUM7z88suN/cYbbzR2qjOU8mfSfgXGsYyD\nmd9CDbC8vNzY1AQpbmaczs/z/t1aR+wLagLGzNRnqXYp3537sUmqZZr6YqhGINRfvP+zzz47+J6O\nDCKFziBS6AwixUQ1w5NPPtnYnBt/5ZVXGpu5PtQEaf8C41rGmbR5P+a7sD3UAHx+qvfJOJ5xfldD\nUU+xTi3zplijifdO5yfw8ynGZ1+n32qohuD9+XnuN0+aZz0cGUQKnUGk0BlEiolqBsL8Ee6j5dw5\nY+y0BzqdlcyYnnPtfD4/z/0IXHdIZ7gxLqfm6K5zUJ/wvAXem20fWreWbU+1VtOZa0lDkLSOkeo2\nXQ2ODCKFziBS6AwixaZqBs51c26cc+sprqVG4LpAytFnLhLjbt6Pe7ipAVKtoZmZmcZmf3Q1Cq+x\nxhRtPpt6hHqHMTfXWDa65zlpiAQ1BnOz+L5XgyODSKEziBQ6g0ixqZqBcd5jjz3W2KdPn27slOuT\n9lSnufZ0tjFJdZaoQahp0vXuHmieH8eYnjE4674yd4d9yb7j/m62bXZ2trHTeQ6JtK5A/guNQBwZ\nRAqdQaTQGUSKTdUMJJ2BlvYfMI5knDsU3p9xNdchWFt1dXW1t30p36cbl+/cubO5xppL1Dd99xqN\nrqzryr46depUY+/fv7+xmQuVzr5IazwJ/hbX4vwHRwaRQmcQKXQGkWJLawbGuawrRE3BmJ4xejoX\nmtcZl589e7ax09nKhO1h7hXj/O6ZCzxvjhpibm6usZnnxfMbuHeDbVtcXOy9znWM7prIaHSlBhm6\n7kCoEVxnELmG6Awihc4gUmwpzcC4knEtc/IZ46c90NQUzKchnEtne7h/gfuS05lzhHsGunEx1xGo\nEai3mDdFDUHNwTwpXidcY0m1Xoee0ZbWkDaqQdbDkUGk0BlEii0VJnFbZTpalmESYfrG0JQAhhop\nbGLpG7YvHQXF53VDDaZwT09PN3aa6mQIl0pz7t27t7EZUqYjw9K7pm2fKSS+FjgyiBQ6g0ihM4gU\nW0ozsHwJ41BO/zGOTHElNQfvz5RqXk9HQXFqlHYqkU+6cTpj9nSMbzqiizF8SndgOkgq3cm+TkeK\nUSMwHZ4l+K8Fjgwihc4gUugMIsWW0gxc0mdcmuLKdHRROho3pR3TZtzOdYK0zsD2MF2kq6GSXklr\nKNQnfDZtaob0/bRFln3L9+EW2Y0ejXs1ODKIFDqDSKEziBRbSjNwnYFz1YzJqTG47ZJz44yDU/5M\nShtm3My4mO1NcT8/37WZwk29ksrkJE2R0tl5v5TOTn3Hvrt48WLv/Xm/tCbzX+DIIFLoDCKFziBS\nbCnNwDLrjDvTXDjnqtPc9tASiCkfiBqAcTFhHMw9C911E74r+4p6g3lRae8E34WfT/sV0rFZ1HfU\nHNxvsdFylFeDI4NIoTOIFDqDSLGlNAPLNzLuZFyaSrxz3YG5S9QAjMOpARjnJs1AUhzPfcvduD6V\nUmEuUJrn5/dp89047881IeojPp99y3elnkvHFl8LHBlECp1BpNAZRIqJagauA3z44YeN/e677zZ2\nmvtOcTE1AeswpaOYUq5R0hR95SJHozy33i2Jz3l+1knqq7k0GuVjgdP+h3SkGDUD7ZmZmcamvhu6\nH+Na4MggUugMIoXOIFJMVDOcOHGisV977bW2MeGYqZSblOoYkbW1tcZOe54Zx6ajddk+aphU26hb\nJ4oxP21qBs7js+YU+5Lf57vxSC+uG/B+1DTUCHxe2mvCNSNe37Vr12ijODKIFDqDSKEziBQT1Qxv\nvfVWY/N41QMHDvR+P9UHTUcbcR8xYcxOO+0T5nWug9BmHNy3jsIYmfu7qZeohzhPz7akmk/pmN8j\nR440NtdweP/0W6VjiD///PPGPn78eGOn33o9HBlECp1BpNAZRIqJaobTp083Nuee055nxpHUDFxX\n4L5b5uCnODl9P+U2pfydpEG6uoB9Qw3BurN8FvdXU3Mwb4wxOtctDh482Nh9NZ/Ws7muQPh+7OuV\nlZXGfu+99xr7+eef773/ejgyiBQ6g0ihM4gUE9UMjKmv9b5WagDm+KdzzhgnM65O+UG8HzVHOn+i\nby6euUFpTYRtXVpaamzqM56hdvjw4cZO59elukwk5UpRfz300EONffLkycamhuIZ3eu2IX5C5H8E\nnUGk0BlEiolqhunp6cbmXDE1BDVGqpVKm3Ez407GpenMtampqcZmzJ80ATUM84f61ilS3VjqG36e\nmmHPnj2NPT8/39i7d+9u7FSzKp09kc6NTvsZSKqBderUqcY+evRo7/1GI0cGkcvoDCKFziBSTFQz\n7Nu3r7GZ/5LqJDGuTJohzW0zzk25SbzO3Crm/zBOTnsKSPd9mZ/PefPZ2dnG5h5k1i2i/mFfcE0m\n6bmkKfhbpv3uSb9xXYOaiblX4+DIIFLoDCKFziBSbEtnCoj8r+DIIFLoDCKFziBS6Awihc4gUugM\nIoXOIFLoDCKFziBS6Awihc4gUugMIoXOIFLoDCKFziBS6Awihc4gUugMIoXOIFLoDCKFziBS6Awi\nhc4gUvwfP0iOtRIzaaQAAAAASUVORK5CYII=\n",
-      "text/plain": [
-       "<matplotlib.figure.Figure at 0xed28940>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "# 임의의 얼굴 하나를 출력한 다음 맞혀보는 코드 \n",
-    "r = random.randint(0, _num_examples -1)\n",
-    "print (\"Label: \", sess.run(tf.argmax(test_labels[r:r+1], 1)))\n",
-    "print (\"Prediction: \", sess.run(tf.argmax(yy, 1), {x:test_images[r:r+1]}))\n",
-    "\n",
-    "plt.imshow(test_images[r:r+1].reshape(55, 40), cmap='gray', interpolation='nearest')\n",
-    "plt.axis('off')\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
