--- a/python_archive/ipython/hangeulDetection2.ipynb
+++ b/python_archive/ipython/hangeulDetection2.ipynb
@@ -265,17 +265,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "saver = tf.train.Saver()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
    "outputs": [
@@ -294,6 +283,7 @@
     "#----------------------------------------------\n",
     "batch_size = 50      # 한 루프에 몇개의 (Image, Label) 데이터를 학습하는지 설정\n",
     "display_step = 200   # 루프를 돌면서 화면에 표시할 빈도 설정\n",
+    "saver = tf.train.Saver()\n",
     "\n",
     "for i in range(100000):\n",
     "    costVal = 0.\n",
@@ -337,22 +327,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Label:  [12]\n",
-      "Prediction:  [12]\n"
+      "INFO:tensorflow:Restoring parameters from ./modelSaved/hangeul2\n"
+     ]
+    }
+   ],
+   "source": [
+    "saver = tf.train.Saver()\n",
+    "sess = tf.Session()\n",
+    "\n",
+    "saver.restore(sess, './modelSaved/hangeul2')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3901\n",
+      "Label:  [9]\n",
+      "Prediction:  [9]\n"
      ]
     },
     {
      "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAP4AAAD8CAYAAABXXhlaAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAADyxJREFUeJzt3W2MXOV5xvH/xdouodQYx1vL2IalAhH4UGxpeRMRolAq\nl0Qxkg0CosqAJQsR3oMCFKkiUoWCBDj5UFUyxcqKpLyUJDIC1NQYWxWoMl6DnQCug2M5xJbBC3gV\nQCJg++6HOdvuGa89450zs7O9r5+0mrnPnJlzy+Nrn3nOnjlHEYGZ5XLcRDdgZp3n4Jsl5OCbJeTg\nmyXk4Jsl5OCbJeTgmyXk4Jsl1FLwJS2StF3SDkn3VdWUmbWXxnvknqQe4DfAFcBuYBNwXUS8c6Tn\nzJo1K/r6+sa1PTNrbNeuXXz44YdqtN6UFrZxPrAjInYCSHoaWAwcMfh9fX0MDg62sEkzO5r+/v6m\n1mvlo/5c4Pej6t3FshJJKyQNShocGhpqYXNmVpW279yLiFUR0R8R/b29ve3enJk1oZXg7wHmj6rn\nFcvMrMu1EvxNwJmSTpc0DbgWeL6atsysnca9cy8iDki6Ffgl0AOsjoi3K+vMzNqmlb36RMRLwEsV\n9WJmHeIj98wScvDNEnLwzRJy8M0ScvDNEnLwzRJy8M0ScvDNEnLwzRJy8M0ScvDNEnLwzRJy8M0S\ncvDNEnLwzRJy8M0ScvDNEnLwzRJy8M0ScvDNEnLwzRJy8M0ScvDNEnLwzRJy8M0ScvDNEnLwzRJy\n8M0ScvDNEnLwzRJy8M0ScvDNEnLwzRJqGHxJqyXtk/TWqGUzJa2V9G5xe3J72zSzKjUz4v8YWFS3\n7D5gXUScCawrajObJBoGPyL+E/i4bvFiYKC4PwBcVXFfZtZG453jz46IvcX994HZR1pR0gpJg5IG\nh4aGxrk5M6tSyzv3IiKAOMrjqyKiPyL6e3t7W92cmVVgvMH/QNIcgOJ2X3UtmVm7jTf4zwPLivvL\ngDXVtGNmndDMn/OeAv4LOEvSbknLgR8AV0h6F/jrojazSWJKoxUi4rojPHR5xb2YWYf4yD2zhBx8\ns4QcfLOEHHyzhBx8s4QcfLOEHHyzhBx8s4QcfLOEHHyzhBx8s4QcfLOEHHyzhBp+O89yq51g6f9I\nmqBOrEoe8c0ScvDNEnLwzRLyHD+5+jn8Rx99VKo3bNhQqpcsWVKqPeefnDzimyXk4Jsl5OCbJeQ5\nvpVMnTq1VF999dWl+uDBg6Xac/zJySO+WUIOvllCDr5ZQp7jW8n06dNL9fz580t1/Rz/uOM8dkxG\nftfMEnLwzRJy8M0ScvDNEvLOPTuqOXPmlOo1a9aU6qVLl3ayHauIR3yzhBoGX9J8SeslvSPpbUl3\nFMtnSlor6d3i9uT2t2tmVWhmxD8AfDcizgEuBL4j6RzgPmBdRJwJrCtqM5sEGs7xI2IvsLe4/4mk\nbcBcYDFwabHaALABuLctXSZQf0KM8Th06FCprv8CzVjb6OnpOeo6N9xwQ6leu3ZtqfYcf3I6pjm+\npD5gIbARmF38UgB4H5hdaWdm1jZNB1/SicDPgDsj4g+jH4vaMDHmkCVphaRBSYNDQ0MtNWtm1Wgq\n+JKmUgv9TyPi58XiDyTNKR6fA+wb67kRsSoi+iOiv7e3t4qezaxFDef4qk0UnwC2RcRjox56HlgG\n/KC4XTPG0+0I6ufSw8PDpXrPnj2HPefGG28s1Zs3by7V9b9YN23aVKrnzZvXsK/6/QKLFy8u1Vu2\nbGn4Gtb9mjmA52Lg74BfSxp51/+eWuCflbQc+B1wTXtaNLOqNbNX/1XgSOdXurzadsysE3zknllC\nPla/Q7744otS/dhjj5Xq+rnzrbfeethrDAwMlOq5c+eW6rPOOqtUn3DCCaV6PCfGPP7440v1Z599\ndsyvYd3HI75ZQg6+WUIOvllCnuNPkFtuuaVU79y5s1SfffbZhz2n/mIX7733Xqn+8ssvS/WMGTNK\n9Xjm+J988kmprj+2f6LUHwfhC3scG4/4Zgk5+GYJOfhmCTn4Zgl5516HTJs27aj1ggULGr5G/Q6t\nlStXluqXXnqpVDc6yQY03im2cePGhq/RDbyz79h4xDdLyME3S8jBN0vIc/wu0cwcddu2baV69+7d\npXrhwoUNX+NYvfLKK6W6/sCiseb89QcS1V9h9+OPPz7qa9xzzz2HveZrr71Wqm+77bZSfffdd5fq\nKVP8X/toPOKbJeTgmyXk4Jsl5IlQlxpr7nzvveXrlTz11FOluv5LPFVst/7LQ7fffnuprj/BCMD1\n119fqvfv31+qH3jggVJdf2HO1atXH/aa9ScV6dbjCSYLj/hmCTn4Zgk5+GYJeY7fJfbu3VuqxzoR\nx+DgYKk+8cQT29rTWN54441SvWLFisPWefDBB0v1JZdcUqrrv6cwHj4WvzUe8c0ScvDNEnLwzRLy\nHL9NGv2d+fPPPy/VV155Zake65LiVcyNGzl06FCpPu648tjw+OOPl+pXX3217T1Z9TzimyXk4Jsl\n5OCbJeTgmyXknXttUn+ASf3JKJYsWVKq161bV6o7dSKJ+p2Q9Tvztm/fXqrrr/I7nhN42sTziG+W\nUMPgSzpe0uuStkp6W9L3i+WnS9ooaYekZyS1/29NZlaJZkb8PwKXRcS5wAJgkaQLgYeBlRFxBrAf\nWN6+Ns2sSg0nklGbxH1alFOLnwAuA0bOuDAAPAj8c/UtTk5bt24t1Y8++mip/slPflKqZ86c2fae\nmlG/L+Kmm24q1RdccEGp9nx+cmpqji+pR9IWYB+wFvgtMBwRB4pVdgNz29OimVWtqeBHxMGIWADM\nA84HvtbsBiStkDQoaXCsw1DNrPOOaa9+RAwD64GLgBmSRqYK84A9R3jOqojoj4j+3t7elpo1s2o0\nnONL6gW+jIhhSV8BrqC2Y289sBR4GlgGrGlno93sueeeO2zZiy++WKoHBgZKdbfMjev7ePLJJ0v1\nSSedVKpPOeWUUu2/409OzRwlMgcYkNRD7RPCsxHxgqR3gKcl/SPwJvBEG/s0swo1s1f/V8DCMZbv\npDbfN7NJxkfumSXkY/XHof5kFeedd95h6yxevLhT7VTq5ptvLtX1F+as5/n85OQR3ywhB98sIQff\nLCHP8ceh/jvrp5122gR10rrPPvusVB84cKBUz5o1q5PtWId4xDdLyME3S8jBN0vIwTdLyDv3kqu/\nSu8jjzxSqusPVurp6Wl7T9Z+HvHNEnLwzRJy8M0S8hw/uZdffrlUX3TRRRPUiXWSR3yzhBx8s4Qc\nfLOEPMdPpP5iGQB33XVXqR4eHi7V9V9Isv8f/K6aJeTgmyXk4Jsl5Dl+Ip9++ulhy+68885SPW2a\nr3aegUd8s4QcfLOEHHyzhDzHT2T69OmHLXvooYdKtS+QkYNHfLOEHHyzhBx8s4Q8x0/E83cb4RHf\nLCEH3yyhpoMvqUfSm5JeKOrTJW2UtEPSM5J8rKfZJHEsI/4dwLZR9cPAyog4A9gPLK+yMTNrn6aC\nL2ke8A3gX4pawGXAc8UqA8BV7WjQzKrX7Ij/Q+B7wMhlVb4KDEfEyDWVdwNzK+7NzNqkYfAlfRPY\nFxGbx7MBSSskDUoaHBoaGs9LmFnFmhnxLwa+JWkX8DS1j/g/AmZIGjkOYB6wZ6wnR8SqiOiPiP7e\n3t4KWjazVjUMfkTcHxHzIqIPuBZ4JSK+DawHlharLQPWtK1LM6tUK3/Hvxe4W9IOanP+J6ppycza\n7ZgO2Y2IDcCG4v5O4PzqWzKzdvORe2YJOfhmCTn4Zgk5+GYJOfhmCTn4Zgk5+GYJOfhmCTn4Zgk5\n+GYJOfhmCTn4Zgk5+GYJOfhmCTn4Zgk5+GYJOfhmCTn4Zgk5+GYJOfhmCTn4Zgk5+GYJOfhmCTn4\nZgk5+GYJOfhmCTn4Zgk5+GYJOfhmCTn4Zgk5+GYJOfhmCTn4ZglNaWYlSbuAT4CDwIGI6Jc0E3gG\n6AN2AddExP72tGlmVTqWEf+vImJBRPQX9X3Auog4E1hX1GY2CbTyUX8xMFDcHwCuar0dM+uEZoMf\nwH9I2ixpRbFsdkTsLe6/D8yuvDsza4um5vjA1yNij6Q/B9ZK+u/RD0ZESIqxnlj8olgBcOqpp7bU\nrJlVo6kRPyL2FLf7gF8A5wMfSJoDUNzuO8JzV0VEf0T09/b2VtO1mbWkYfAl/amkPxu5D/wN8Bbw\nPLCsWG0ZsKZdTZpZtZr5qD8b+IWkkfX/NSL+XdIm4FlJy4HfAde0r00zq1LD4EfETuDcMZZ/BFze\njqbMrL185J5ZQooYc2d8ezYmDVGbFswCPuzYhsfPfVZnMvQIk7/P0yKi4V70jgb/fzcqDY46ArBr\nuc/qTIYeIU+f/qhvlpCDb5bQRAV/1QRt91i5z+pMhh4hSZ8TMsc3s4nlj/pmCXU0+JIWSdouaYek\nrvr+vqTVkvZJemvUspmS1kp6t7g9eYJ7nC9pvaR3JL0t6Y4u7fN4Sa9L2lr0+f1i+emSNhbv/zOS\npk1kn0VPPZLelPRCF/e4S9KvJW2RNFgsa+k971jwJfUA/wT8LXAOcJ2kczq1/Sb8GFhUt6zbTjZy\nAPhuRJwDXAh8p/g37LY+/whcFhHnAguARZIuBB4GVkbEGcB+YPkE9jjiDmDbqLobe4SqT4QTER35\nAS4Cfjmqvh+4v1Pbb7LHPuCtUfV2YE5xfw6wfaJ7rOt3DXBFN/cJnAC8AVxA7YCTKWP9f5ig3uYV\nobkMeAFQt/VY9LELmFW3rKX3vJMf9ecCvx9V7y6WdbOuPdmIpD5gIbCRLuyz+Ai9hdrXtdcCvwWG\nI+JAsUo3vP8/BL4HHCrqr9J9PUIbToTT7Ik40os48slGOk3SicDPgDsj4g/FNyeB7ukzIg4CCyTN\noHYOh69NcEslkr4J7IuIzZIuneh+Ghj3iXCOpJMj/h5g/qh6XrGsmzV1spFOkjSVWuh/GhE/LxZ3\nXZ8jImIYWE/tY/MMSSODzUS//xcD3yrOIP00tY/7P6K7egRaOxHOkXQy+JuAM4u9ptOAa6mdzKOb\nddXJRlQb2p8AtkXEY6Me6rY+e4uRHklfobYfYhu1XwBLi9UmtM+IuD8i5kVEH7X/i69ExLfpoh6h\njSfC6fBOiiuB31Cb7z0w0TtN6np7CtgLfEltbrec2pxvHfAu8DIwc4J7/Dq1+d6vgC3Fz5Vd2Odf\nAm8Wfb4F/EOx/C+A14EdwL8BfzLR73vR16XAC93YY9HP1uLn7ZHctPqe+8g9s4R85J5ZQg6+WUIO\nvllCDr5ZQg6+WUIOvllCDr5ZQg6+WUL/AxK59nWo+UWYAAAAAElFTkSuQmCC\n",
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAP4AAAD8CAYAAABXXhlaAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAADuVJREFUeJzt3V+MXPV5xvHvg20IJQ1m8dYYr8268qrhj8CIFTV/Llxc\nKkOj4AtAUFQZZMlCCogIpARaqWpEL/ANJBJVJaug+CINpiTICEWkW8eoVFSYpZjE4AIOMmAD3gVs\nQQUCbN5ezHG1Z2btmd05Mzvr9/lIq533zJk5r7x+9je/M2d+q4jAzHI5aaYbMLPuc/DNEnLwzRJy\n8M0ScvDNEnLwzRJy8M0ScvDNEmor+JLWSHpd0h5J91bVlJl1lqZ75Z6kOcAbwNXAPuBF4OaIeO1Y\nj1mwYEEMDg5O63hm1tzevXv58MMP1Wy/uW0c41JgT0S8BSDpMeA64JjBHxwcZHR0tI1DmtnxDA8P\nt7RfOy/1FwPvTqj3FdtKJG2QNCppdHx8vI3DmVlVOn5yLyI2RcRwRAz39/d3+nBm1oJ2gr8fWDKh\nHii2mVmPayf4LwJDkpZJOhm4CXiqmrbMrJOmfXIvIg5LugP4NTAHeDQiXq2sMzPrmHbO6hMRvwJ+\nVVEvZtYlvnLPLCEH3ywhB98sIQffLCEH3ywhB98sIQffLCEH3ywhB98sIQffLCEH3ywhB98sIQff\nLCEH3ywhB98sIQffLCEH3ywhB98sIQffLCEH3ywhB98sIQffLCEH3ywhB98sIQffLCEH3ywhB98s\nIQffLCEH3ywhB98sIQffLCEH3ywhB98soabBl/SopDFJuyZs65M0IunN4vsZnW3TzKrUyoj/U2BN\n3bZ7gW0RMQRsK2ozmyWaBj8i/gP4uG7zdcDm4vZmYG3FfZlZB013jr8wIt4vbn8ALDzWjpI2SBqV\nNDo+Pj7Nw5lZldo+uRcRAcRx7t8UEcMRMdzf39/u4cysAtMN/gFJiwCK72PVtWRmnTbd4D8FrCtu\nrwO2VtOOmXVDK2/n/Rz4L+BPJO2TtB54ALha0pvAnxe1mc0Sc5vtEBE3H+Ou1RX3YmZd4iv3zBJy\n8M0ScvDNEnLwzRJy8M0ScvDNEnLwzRJy8M0ScvDNEnLwzRJy8M0ScvDNEnLwzRJy8M0ScvDNEnLw\nzRJy8M0SaroCj81eY2PlNVC/+uqrhn3OPvvsUi2poz1Zb/CIb5aQg2+WkINvlpDn+CewBx98sFTf\ncsstDfvUz/EtB4/4Zgk5+GYJOfhmCXmOfwK74YYbSvXdd9/dsM/IyEi32rEe4hHfLCEH3ywhB98s\nIQffLCGf3GtBRBz3/k58sGWyY071OAsWLCjV8+bNa9jn8OHDpXruXP+XyMAjvllCTYMvaYmk7ZJe\nk/SqpLuK7X2SRiS9WXw/o/PtmlkVWhnxDwP3RMR5wErge5LOA+4FtkXEELCtqM1sFmg6oYuI94H3\ni9ufStoNLAauA1YVu20GngV+2JEuZ1j93Prrr7+e8mOanSeov/+kkxp/J9fv02zOf9ppp5Xq7du3\nN+wz2XHsxDeln7qkQeBi4AVgYfFLAeADYGGlnZlZx7QcfEnfBH4BfD8iPpl4X9SGokmHNEkbJI1K\nGh0fH2+rWTOrRkvBlzSPWuh/FhG/LDYfkLSouH8RMDbZYyNiU0QMR8Rwf39/FT2bWZuazvFVm0g+\nAuyOiIkrOzwFrAMeKL5v7UiHPaj+ve8tW7Y07PPee++V6vnz55fq+oUv698/n+z99GuvvbZUN1tE\n41vf+tZxe5isj1NOOaVUT/W8gs0OrVytcQXw18DvJO0stv0NtcA/Lmk98DZwY2daNLOqtXJW/z+B\nY/2aX11tO2bWDX4vxywhX5jdgvo5ff2898knn2x4zO7du0v17bffXqqXLl1aqpctW1aq33777Ybn\nXLx4cal+4403SvXQ0FCprp+PL1zY+I7r559/Xqrr5/ie05+YPOKbJeTgmyXk4Jsl5Dl+C+bMmVOq\n699jf+KJJxoec+jQoVJ9xhnlDy82u5Z/xYoVDc952223lernn3++VC9fvrxU1/f9xRdfNDznzp07\nS/WqVasa9rETj0d8s4QcfLOEHHyzhBx8s4R8cq8Cky1m0dfXN6XnaOVCmY8++qhUf/nll1N6jkWL\nFjVsm+xCITvxecQ3S8jBN0vIwTdLyHP8FnTjgyr1F/BMtjjnc889V6rvv//+KT3n+eef37BP/YeJ\nLAeP+GYJOfhmCTn4Zgl5jt8j6ufjn332WcM+9ecaLrjgguM+R3195ZVXNjznjh07ptSnnRg84psl\n5OCbJeTgmyXkOX6Pevfddxu23XHHHaW62R+8rL9/7dq1Dfs88MADpfrWW2897nPUfz7g4osvbnjO\n+sU8LrnkkuP2ad3nEd8sIQffLCEH3ywhz/Er8OmnnzZsu/POO0v1ypUrS/XHH39cqs8666xSXb8I\nJjTO8Y8cOVKq6xfXrH/fv/6PZQBcdtllpfrhhx8u1QcPHizVn3xS+gvpDccEGBgYaNhmvcUjvllC\nDr5ZQg6+WUIOvllCPrlXgVNPPbVh26ZNm0p1/aKWZ555Zqk+/fTTS/U999zT8JwbN24s1ZOdWJuq\nd955p1TXX7BT32d9bbOTR3yzhJoGX9I3JO2Q9IqkVyX9qNi+TNILkvZI2iLp5M63a2ZVaGXE/wK4\nKiIuAlYAayStBDYCD0XEcuAgsL5zbZpZlZrO8aO2msP/FuW84iuAq4C/KrZvBv4e+KfqW5x5ky18\nOVH9X8+dzNDQ0HHvP3DgQKk+55xzGvaZ7FxCu6b6BzXq/y26sRCpVa+lOb6kOZJ2AmPACPB74FBE\nHC522Qcs7kyLZla1loIfEUciYgUwAFwKfLvVA0jaIGlU0uj4+Pg02zSzKk3prH5EHAK2A5cB8yUd\nfY07AOw/xmM2RcRwRAz39/e31ayZVaPp5FRSP/BVRBySdCpwNbUTe9uB64HHgHXA1k42OpO6MY99\n5plnSvXIyEjDPp2YX19++eVT2t9z+hNDKxfwLAI2S5pD7RXC4xHxtKTXgMck/QPwMvBIB/s0swq1\nclb/t0DD+koR8Ra1+b6ZzTK+cs8sIV+r3yPqF6/o6+tr2KcT8+slS5Yc936/b39i8ohvlpCDb5aQ\ng2+WkOf4PWL16tUzctwLL7ywVO/atatUn3vuuaW6ijUAbOZ5xDdLyME3S8jBN0vIwTdLyCf3krvm\nmmtKdf1fw/UFOycmj/hmCTn4Zgk5+GYJeY6f3Lx5845b24nJI75ZQg6+WUIOvllCDr5ZQg6+WUIO\nvllCDr5ZQg6+WUIOvllCDr5ZQg6+WUIOvllCDr5ZQg6+WUIOvllCDr5ZQg6+WUIOvllCLQdf0hxJ\nL0t6uqiXSXpB0h5JWySd3Lk2zaxKUxnx7wJ2T6g3Ag9FxHLgILC+ysbMrHNaCr6kAeAvgX8uagFX\nAU8Uu2wG1naiQTOrXqsj/o+BHwBfF/WZwKGIOFzU+4DFFfdmZh3SNPiSvgOMRcRL0zmApA2SRiWN\njo+PT+cpzKxirYz4VwDflbQXeIzaS/yfAPMlHV2XfwDYP9mDI2JTRAxHxHB/f38FLZtZu5oGPyLu\ni4iBiBgEbgJ+ExG3ANuB64vd1gFbO9almVWqnffxfwjcLWkPtTn/I9W0ZGadNqU/oRURzwLPFrff\nAi6tviUz6zRfuWeWkINvlpCDb5aQg2+WkINvlpCDb5aQg2+WkINvlpCDb5aQg2+WkINvlpCDb5aQ\ng2+WkINvlpCDb5aQg2+WkINvlpCDb5aQg2+WkINvlpCDb5aQg2+WkINvlpCDb5aQg2+WkINvlpCD\nb5aQg2+WkINvlpCDb5aQg2+WkINvlpCDb5bQ3FZ2krQX+BQ4AhyOiGFJfcAWYBDYC9wYEQc706aZ\nVWkqI/6fRcSKiBgu6nuBbRExBGwrajObBdp5qX8dsLm4vRlY2347ZtYNrQY/gH+T9JKkDcW2hRHx\nfnH7A2Bh5d2ZWUe0NMcHroyI/ZL+CBiR9D8T74yIkBSTPbD4RbEBYOnSpW01a2bVaGnEj4j9xfcx\n4EngUuCApEUAxfexYzx2U0QMR8Rwf39/NV2bWVuaBl/SaZL+8Oht4C+AXcBTwLpit3XA1k41aWbV\nauWl/kLgSUlH9/+XiHhG0ovA45LWA28DN3auTTOrUtPgR8RbwEWTbP8IWN2Jpsyss3zlnllCipj0\nZHxnDiaNU5sWLAA+7NqBp899Vmc29Aizv89zIqLpWfSuBv//DyqNTrgCsGe5z+rMhh4hT59+qW+W\nkINvltBMBX/TDB13qtxndWZDj5CkzxmZ45vZzPJLfbOEuhp8SWskvS5pj6Se+vy+pEcljUnaNWFb\nn6QRSW8W38+Y4R6XSNou6TVJr0q6q0f7/IakHZJeKfr8UbF9maQXip//Fkknz2SfRU9zJL0s6eke\n7nGvpN9J2ilptNjW1s+8a8GXNAf4R+Aa4DzgZknndev4LfgpsKZuW68tNnIYuCcizgNWAt8r/g17\nrc8vgKsi4iJgBbBG0kpgI/BQRCwHDgLrZ7DHo+4Cdk+oe7FHqHohnIjoyhdwGfDrCfV9wH3dOn6L\nPQ4CuybUrwOLituLgNdnuse6frcCV/dyn8AfAP8N/Cm1C07mTvb/YYZ6GyhCcxXwNKBe67HoYy+w\noG5bWz/zbr7UXwy8O6HeV2zrZT272IikQeBi4AV6sM/iJfROah/XHgF+DxyKiMPFLr3w8/8x8APg\n66I+k97rETqwEE6rC3GkF3HsxUa6TdI3gV8A34+IT4pPTgK902dEHAFWSJpPbQ2Hb89wSyWSvgOM\nRcRLklbNdD9NTHshnGPp5oi/H1gyoR4otvWylhYb6SZJ86iF/mcR8ctic8/1eVREHAK2U3vZPF/S\n0cFmpn/+VwDfLVaQfozay/2f0Fs9Au0thHMs3Qz+i8BQcdb0ZOAmaot59LKeWmxEtaH9EWB3RDw4\n4a5e67O/GOmRdCq18xC7qf0CuL7YbUb7jIj7ImIgIgap/V/8TUTcQg/1CB1cCKfLJymuBd6gNt/7\n25k+aVLX28+B94GvqM3t1lOb820D3gT+Heib4R6vpDbf+y2ws/i6tgf7vBB4uehzF/B3xfY/BnYA\ne4B/BU6Z6Z970dcq4Ole7LHo55Xi69WjuWn3Z+4r98wS8pV7Zgk5+GYJOfhmCTn4Zgk5+GYJOfhm\nCTn4Zgk5+GYJ/R+V3r6Cni535AAAAABJRU5ErkJggg==\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0xd0d1630>"
+       "<matplotlib.figure.Figure at 0x135f1940>"
       ]
      },
      "metadata": {},
@@ -364,6 +375,7 @@
     "# 임의의 얼굴 하나를 출력한 다음 맞혀보는 코드 \n",
     "test_num_examples , bin2 = test_images.shape\n",
     "r = random.randint(0, test_num_examples -1)\n",
+    "print(r)\n",
     "print (\"Label: \", sess.run(tf.argmax(test_labels[r:r+1], 1)))\n",
     "print (\"Prediction: \", sess.run(tf.argmax(y_conv, 1), {x:test_images[r:r+1], keep_prob:1.0}))\n",
     "\n",
