--- a/python_archive/ipython/hangeulDetection3.ipynb
+++ b/python_archive/ipython/hangeulDetection3.ipynb
@@ -437,27 +437,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "step 0 training_accuracy 0.76 cost 0.938979\n",
-      "step 200 training_accuracy 0.92 cost 0.198657\n",
-      "step 400 training_accuracy 0.94 cost 0.193142\n",
-      "step 600 training_accuracy 0.94 cost 0.208289\n",
-      "step 800 training_accuracy 0.98 cost 0.0859092\n",
-      "step 1000 training_accuracy 0.98 cost 0.0602581\n",
-      "step 1200 training_accuracy 0.98 cost 0.0688045\n",
-      "step 1400 training_accuracy 1.0 cost 0.0374039\n",
-      "step 1600 training_accuracy 0.98 cost 0.0892809\n",
-      "step 1800 training_accuracy 0.98 cost 0.0563468\n",
-      "step 2000 training_accuracy 0.94 cost 0.0935929\n",
-      "step 2200 training_accuracy 1.0 cost 0.00510751\n",
-      "step 2400 training_accuracy 0.98 cost 0.0674566\n",
-      "step 2600 training_accuracy 0.96 cost 0.100826\n"
+      "step 0 training_accuracy 1.0 cost 0.00963534\n",
+      "step 20 training_accuracy 0.94 cost 0.0961786\n",
+      "step 40 training_accuracy 1.0 cost 0.00101937\n",
+      "step 60 training_accuracy 1.0 cost 0.0005573\n",
+      "step 80 training_accuracy 1.0 cost 0.0127231\n"
      ]
     }
    ],
@@ -467,10 +458,10 @@
     "_labels = mod_labels  # Label 변수\n",
     "\n",
     "batch_size = 50      # 한 루프에 몇개의 (Image, Label) 데이터를 학습하는지 설정\n",
-    "display_step = 200   # 루프를 돌면서 화면에 표시할 빈도 설정\n",
+    "display_step = 20   # 루프를 돌면서 화면에 표시할 빈도 설정\n",
     "saver = tf.train.Saver()\n",
     "\n",
-    "for i in range(5000):\n",
+    "for i in range(100):\n",
     "    costVal = 0.\n",
     "    batch = next_batch(batch_size)\n",
     "    # 20번 돌릴 때마다 결과를 확인한다\n",
@@ -490,16 +481,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test accuracy 0.929337\n"
+     ]
+    }
+   ],
    "source": [
     "# 전부 학습이 끝나면 테스트 데이터를 넣어 정확도를 계산한다\n",
     "test_accuracy = sess.run(accuracy,feed_dict={x: test_images, y: test_labels, keep_prob: 1.0})\n",
     "print('test accuracy', test_accuracy)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
