--- a/python_archive/ipython/hangeulDetection3.ipynb
+++ b/python_archive/ipython/hangeulDetection3.ipynb
@@ -20,9 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#-----------------------------------------------------------------\n",
@@ -32,7 +30,7 @@
     "\n",
     "# train Image 데이터 700장을 불러온다\n",
     "# train Label 데이터를 불러온다\n",
-    "with h5py.File('d:/edward/kalph_train.hf', 'r') as hf:\n",
+    "with h5py.File('C:/Users/edward/GoogleDrive/private2/machineLearningData/visualComputing_hangeul/kalph_train.hf', 'r') as hf:\n",
     "    train_images = np.array(hf['images'])\n",
     "    tlabels = np.array(hf['labels'])\n",
     "\n",
@@ -57,7 +55,7 @@
     "\n",
     "# train Image 데이터 700장을 불러온다\n",
     "# train Label 데이터를 불러온다\n",
-    "with h5py.File('d:/edward/kalph_test.hf', 'r') as hf:\n",
+    "with h5py.File('C:/Users/edward/GoogleDrive/private2/machineLearningData/visualComputing_hangeul/kalph_test.hf', 'r') as hf:\n",
     "    test_images = np.array(hf['images'])\n",
     "    testlabels = np.array(hf['labels'])\n",
     "\n",
@@ -82,28 +80,6 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(19600, 2704)"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_images.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
    "outputs": [],
    "source": [
     "#-----------------------------------------------------------------\n",
@@ -173,17 +149,13 @@
     "\n",
     "# max pooling을 실행하는 함수\n",
     "def max_pool_2x2(x):\n",
-    "\treturn tf.nn.max_pool(x, ksize=[1,2,2,1], strides=[1,2,2,1], padding='SAME')\n",
-    "\n",
-    "\n"
+    "\treturn tf.nn.max_pool(x, ksize=[1,2,2,1], strides=[1,2,2,1], padding='SAME')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "\n",
@@ -291,9 +263,7 @@
     "\n",
     "# 정답률을 계산한다  y_conv  vs  y\n",
     "correct_prediction = tf.equal(tf.argmax(y_conv, 1), tf.argmax(y, 1))\n",
-    "accuracy = tf.reduce_mean(tf.cast(correct_prediction, tf.float32))\n",
-    "\n",
-    "\n"
+    "accuracy = tf.reduce_mean(tf.cast(correct_prediction, tf.float32))"
    ]
   },
   {
@@ -365,7 +335,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Restoring parameters from ./modelSaved/hangeul2\n"
+      "INFO:tensorflow:Restoring parameters from C:/Users/edward/GoogleDrive/private2/machineLearningData/modelSaved/hangeul3\n"
      ]
     }
    ],
@@ -373,28 +343,28 @@
     "saver = tf.train.Saver()\n",
     "sess = tf.Session()\n",
     "\n",
-    "saver.restore(sess, './modelSaved/hangeul3')"
+    "saver.restore(sess, 'C:/Users/edward/GoogleDrive/private2/machineLearningData/modelSaved/hangeul3')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1825\n",
-      "Label:  [6]\n",
-      "Prediction:  [6]\n"
+      "2745\n",
+      "Label:  [11]\n",
+      "Prediction:  [11]\n"
      ]
     },
     {
      "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAP4AAAD8CAYAAABXXhlaAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAD/VJREFUeJzt3X2MVfWdx/H3Rx7EZ7CMSAQdDGQbNIsmE1fFxKdVsTY+\nBZ/WbDAhQRNNbNTUhzWLTTamRqJtfAwqFpNaZNc2ECRWpJiNZiOOq7Yqa6VKUwgww67YaowIfveP\ne2jmnLnDvTP33Ifp7/NKJnO/Z8495wuXD+f+fnPOuYoIzCwtB7W7ATNrPQffLEEOvlmCHHyzBDn4\nZgly8M0S5OCbJcjBN0tQQ8GXNE/SR5I2S7qrrKbMrLk00jP3JI0Bfg9cAGwF3gKui4gPh3rO5MmT\no7u7e0T7M7PatmzZwq5du1RrvbEN7OM0YHNEfAIgaQVwGTBk8Lu7u+nt7W1gl2Z2ID09PXWt18hb\n/eOAPw2ot2bLciQtktQrqbe/v7+B3ZlZWZo+uRcRSyOiJyJ6urq6mr07M6tDI8HfBkwfUE/LlplZ\nh2sk+G8BsyTNkDQeuBZYXU5bZtZMI57ci4i9km4Bfg2MAZZFxAeldWZmTdPIrD4RsRZYW1IvZtYi\nPnPPLEEOvlmCHHyzBDn4Zgly8M0S5OCbJcjBN0uQg2+WIAffLEEOvlmCHHyzBDn4Zgly8M0S5OCb\nJcjBN0uQg2+WIAffLEEOvlmCHHyzBDn4Zgly8M0S5OCbJcjBN0uQg2+WIAffLEEOvlmCHHyzBDn4\nZgly8M0S5OCbJcjBN0uQg2+WIAffLEE1gy9pmaQ+Se8PWHa0pHWSPs6+T2pum2ZWpnqO+D8D5hWW\n3QWsj4hZwPqsNrNRombwI+I/gf8rLL4MWJ49Xg5cXnJfZtZEIx3jT4mI7dnjHcCUoVaUtEhSr6Te\n/v7+Ee7OzMrU8OReRAQQB/j50ojoiYierq6uRndnZiUYafB3SpoKkH3vK68lM2u2kQZ/NbAge7wA\nWFVOO2bWCvX8Ou8XwH8Bfydpq6SFwI+BCyR9DPxjVpvZKDG21goRcd0QPzq/5F7MrEV85p5Zghx8\nswQ5+GYJcvDNEuTgmyXIwTdLkINvliAH3yxBDr5ZgmqeuWc2XN9++22uPuggH186jV8RswQ5+GYJ\ncvDNEuQxvg3Lvn37cnW18fvjjz+eq2+88cZcPW7cuPIbs2HxEd8sQQ6+WYIcfLMEeYxvwzJmzJhc\nXbnJct6nn36aq1etyt+Scf78+eU3ZsPiI75Zghx8swQ5+GYJ8hjfGiJp0LKvvvoqV19xxRWtasfq\n5CO+WYIcfLMEOfhmCfIY30p37LHH5upq8wDWXj7imyXIwTdLkINvliAH3yxBntyz0h1zzDG5utqF\nPNZePuKbJahm8CVNl7RB0oeSPpB0a7b8aEnrJH2cfZ/U/HbNrAz1HPH3ArdHxGzgdOBmSbOBu4D1\nETELWJ/VZjYK1BzjR8R2YHv2+C+SNgHHAZcB52SrLQdeA+5sSpc2qowfPz5XFz9go3gzD2u9YY3x\nJXUDpwJvAlOy/xQAdgBTSu3MzJqm7uBLOhx4EfhBRPx54M+iMm1bdepW0iJJvZJ6+/v7G2rWzMpR\nV/AljaMS+p9HxC+zxTslTc1+PhXoq/bciFgaET0R0dPV1VVGz2bWoHpm9QU8A2yKiIcG/Gg1sCB7\nvABYVXyupSkicl9jx47NfVn71fMqzAX+GfidpHezZfcAPwZWSloI/BG4ujktmlnZ6pnVfx0Y6rrK\n88ttx8xawWfumSXIA64WKZ6vXrw5xd69e3N1tQ+jLG6jWHfK+LnWn634oZm1/m6sfD7imyXIwTdL\nkINvlqDOGBQm4Ouvv87VmzdvztWLFi3K1UceeeSgbXz++ee5esaMGbn6qaeeytWHHXbYsPssQ3HM\nXuvcfI/pW89HfLMEOfhmCXLwzRLk4JslyJN7TfLyyy/n6sWLF+fqJUuW5Oq1a9fm6sMPP3zQNos3\ntNi+fXuuvuOOO3L1/Pnzc/X55zd+hnU9J9sU13nllVdy9erVq3P1ueeem6uvvPLKQdssntBU3Ee1\nE55saP7bMkuQg2+WIAffLEEe45eg2gdGPProo7n6kUceydWHHnporj7qqKNydT0ntZxwwgm5+qGH\nHsrVV111Va4+88wzB23jkEMOqbmf4Sr2fsMNN+Tq4olGL774Yq5etmzZoG3u2bMnV8+ZMydX33zz\nzbm6+HdTzxxASvME6fxJzeyvHHyzBDn4ZgnyGL8EL7300qBlxQtoZs+enatfffXVXH3SSSc13MeE\nCRNy9f3335+rb7vttkHPeeyxx3J1GePc4jaKFyhddNFFufqSSy4Z9j6+/PLLXP3666/n6rlz5+bq\nm266KVffc889g7ZZ/CCQv2U+4pslyME3S5CDb5Ygj/FLUBxfAtx+++25unju/aWXXpqry7jhZPE5\nJ598cq5+8sknBz3niSeeaGgf1RSvKSjOdxRvtjmSP+sRRxyRq+fNm5erd+zYMextpsRHfLMEOfhm\nCXLwzRLkMf4IFMfjO3fuHLTO9OnTD7iNVpwXXtxHtX0Wx+O1+qpnLqK4bNasWQfcZhmK+/SHdByY\nj/hmCXLwzRLk4JslyME3S5An90pQbeKoOGlW69NkmqH4yTtnnXXWoHWGO8k4kkmys88+u+FtDJcn\n8w7MR3yzBNUMvqQJkjZKek/SB5J+lC2fIelNSZslvSApnWsazUa5eo74XwPnRcQc4BRgnqTTgQeA\nhyNiJvAZsLB5bZpZmWqO8aNyJsQXWTku+wrgPOCfsuXLgfuA4V3xMUrVM34v3ihi4sSJTe2pmuIH\nbjz77LMt2W/x5JlrrrmmJfu1+tU1xpc0RtK7QB+wDvgDsDsi9marbAWOa06LZla2uoIfEfsi4hRg\nGnAa8N16dyBpkaReSb39/f0jbNPMyjSsWf2I2A1sAM4AJkraP1SYBmwb4jlLI6InInq6uroaatbM\nylFzjC+pC/gmInZLOgS4gMrE3gZgPrACWACsamajnaT4O+ILL7xw0DrFG3E8/fTTuXrfvn25euzY\n/EtR7UM6al2IUpx7eO6553L1vffeO2ibzbiY5eCDD87VkyZNanibVq56TuCZCiyXNIbKO4SVEbFG\n0ofACkn/BrwDPNPEPs2sRPXM6v8WOLXK8k+ojPfNbJTxmXtmCfK5+iUofjglwMaNG3P1G2+8kauL\nH/gwkrF2cZ7gwQcfzNVnnHFGri5+4MZI91vLF198UXslaysf8c0S5OCbJcjBN0uQx/gjULyGvTjW\nBli8eHGuXrJkSa5+/vnnc/XFF1+cq2fOnDlom729vQfcxvXXX5+rix9O2YobfAJ88803ubraOQnW\nXj7imyXIwTdLkINvliAH3yxBntwrQbUbcRQ/Hfe+++7L1X19fbn6lltuydXjxw++k9mJJ56Yq9es\nWVOzj3bYtWtXu1uwGnzEN0uQg2+WIAffLEEe47fJ5MmTc/XKlStz9Z49ewY9p3izjk790IjiDUE6\ntc+U+YhvliAH3yxBDr5ZgjzGb5NaF8xU+z1+M26a0QzFi3Q6tc+U+YhvliAH3yxBDr5ZgjzGt4ZU\nu8lG8RwEj/E7j4/4Zgly8M0S5OCbJchj/FGkE8fK1Xq68847c3VxzF/tHAVrLR/xzRLk4JslyME3\nS5DH+DYs9VwvMGXKlAM+x9rPR3yzBDn4ZgmqO/iSxkh6R9KarJ4h6U1JmyW9IMm/ozEbJYZzxL8V\n2DSgfgB4OCJmAp8BC8tszMyap67gS5oGXAI8ndUCzgP+I1tlOXB5Mxq00U9S7svar94j/k+AHwL7\nb5/6HWB3ROzN6q3AcSX3ZmZNUjP4kr4P9EXE2yPZgaRFknol9fb3949kE2ZWsnqO+HOBSyVtAVZQ\neYv/U2CipP3nAUwDtlV7ckQsjYieiOjp6uoqoWUza1TN4EfE3RExLSK6gWuB30TE9cAGYH622gJg\nVdO6tI7h8frfhkZ+j38ncJukzVTG/M+U05KZNduwTtmNiNeA17LHnwCnld+SmTWbz9wzS5CDb5Yg\nB98sQQ6+WYIcfLMEOfhmCXLwzRLk4JslyME3S5CDb5YgB98sQQ6+WYIcfLMEOfhmCXLwzRLk4Jsl\nyME3S5CDb5YgB98sQQ6+WYIcfLMEOfhmCXLwzRLk4JslyME3S5CDb5YgB98sQQ6+WYIcfLMEOfhm\nCXLwzRLk4JslyME3S9DYelaStAX4C7AP2BsRPZKOBl4AuoEtwNUR8Vlz2jSzMg3niH9uRJwSET1Z\nfRewPiJmAeuz2sxGgUbe6l8GLM8eLwcub7wdM2uFeoMfwCuS3pa0KFs2JSK2Z493AFNK787MmqKu\nMT5wVkRsk3QMsE7S/wz8YUSEpKj2xOw/ikUAxx9/fEPNmlk56jriR8S27Hsf8CvgNGCnpKkA2fe+\nIZ67NCJ6IqKnq6urnK7NrCE1gy/pMElH7H8MXAi8D6wGFmSrLQBWNatJMytXPW/1pwC/krR//ecj\n4mVJbwErJS0E/ghc3bw2zaxMNYMfEZ8Ac6os/1/g/GY0ZWbN5TP3zBKkiKqT8c3ZmdRPZVgwGdjV\nsh2PnPssz2joEUZ/nydERM1Z9JYG/687lXoHnAHYsdxneUZDj5BOn36rb5YgB98sQe0K/tI27Xe4\n3Gd5RkOPkEifbRnjm1l7+a2+WYJaGnxJ8yR9JGmzpI66fl/SMkl9kt4fsOxoSeskfZx9n9TmHqdL\n2iDpQ0kfSLq1Q/ucIGmjpPeyPn+ULZ8h6c3s9X9B0vh29pn1NEbSO5LWdHCPWyT9TtK7knqzZQ29\n5i0LvqQxwGPAxcBs4DpJs1u1/zr8DJhXWNZpNxvZC9weEbOB04Gbs7/DTuvza+C8iJgDnALMk3Q6\n8ADwcETMBD4DFraxx/1uBTYNqDuxRyj7RjgR0ZIv4Azg1wPqu4G7W7X/OnvsBt4fUH8ETM0eTwU+\nanePhX5XARd0cp/AocB/A/9A5YSTsdX+PbSpt2lZaM4D1gDqtB6zPrYAkwvLGnrNW/lW/zjgTwPq\nrdmyTtaxNxuR1A2cCrxJB/aZvYV+l8rl2uuAPwC7I2JvtkonvP4/AX4IfJvV36HzeoQm3Ain3htx\nJC9i6JuNtJqkw4EXgR9ExJ+zKyeBzukzIvYBp0iaSOUeDt9tc0s5kr4P9EXE25LOaXc/NYz4RjhD\naeURfxswfUA9LVvWyeq62UgrSRpHJfQ/j4hfZos7rs/9ImI3sIHK2+aJkvYfbNr9+s8FLs3uIL2C\nytv9n9JZPQKN3QhnKK0M/lvArGzWdDxwLZWbeXSyjrrZiCqH9meATRHx0IAfdVqfXdmRHkmHUJmH\n2ETlP4D52Wpt7TMi7o6IaRHRTeXf4m8i4no6qEdo4o1wWjxJ8T3g91TGe//S7kmTQm+/ALYD31AZ\n2y2kMuZbD3wMvAoc3eYez6Iy3vst8G729b0O7PPvgXeyPt8H/jVbfiKwEdgM/DtwcLtf96yvc4A1\nndhj1s972dcH+3PT6GvuM/fMEuQz98wS5OCbJcjBN0uQg2+WIAffLEEOvlmCHHyzBDn4Zgn6f2hB\nIRZ4BXI7AAAAAElFTkSuQmCC\n",
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAP4AAAD8CAYAAABXXhlaAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAD2dJREFUeJzt3X2MVXV+x/H3x0HFh0ZhGSYo0tGAJRrrQybWjfsHajW4\n3az4LN0oiRhM3KqrRlbapHa1fyzRLO4fTZUoyh/bVdtdgsG1W4qYWlPBscquQF1YwmZBcQYrUROz\nAn77xz00c869w73MPfdh+H1eyWTu99yH8w2Xz/zu79xzf1cRgZml5ZhON2Bm7efgmyXIwTdLkINv\nliAH3yxBDr5Zghx8swQ5+GYJair4kuZKel/SdkkPldWUmbWWxnrmnqQe4DfAlcAu4C1gfkRsGe0+\nU6ZMif7+/jHtz8zq27lzJ3v37lW9201oYh8XA9sjYgeApOeBa4BRg9/f38/g4GATuzSzwxkYGGjo\nds281D8d+P2Iele2LUfSIkmDkgaHh4eb2J2ZlaXlB/ciYnlEDETEQG9vb6t3Z2YNaCb4u4EzRtTT\ns21m1uWaCf5bwCxJZ0o6DrgFeKmctsyslcZ8cC8iDkj6K+CXQA+wIiI2l9aZmbVMM0f1iYhfAL8o\nqRczaxOfuWeWIAffLEEOvlmCHHyzBDn4Zgly8M0S5OCbJcjBN0uQg2+WIAffLEEOvlmCHHyzBDn4\nZgly8M0S5OCbJcjBN0uQg2+WIAffLEEOvlmCHHyzBDn4Zgly8M0S5OCbJcjBN0uQg2+WIAffLEEO\nvlmCHHyzBDn4Zgly8M0S5OCbJcjBN0uQg2+WoLrBl7RC0pCk90ZsmyxpraRt2e9JrW3TzMrUyIj/\nHDC3sO0hYF1EzALWZbWZjRN1gx8R/wH8b2HzNcDK7PJKYF7JfZlZC411jt8XER9ml/cAfaPdUNIi\nSYOSBoeHh8e4OzMrU9MH9yIigDjM9csjYiAiBnp7e5vdnZmVYKzB/0jSNIDs91B5LZlZq401+C8B\nC7LLC4DV5bRjZu3QyNt5PwX+C/gTSbskLQR+CFwpaRvw51ltZuPEhHo3iIj5o1x1Rcm9mFmb+Mw9\nswQ5+GYJcvDNEuTgmyXIwTdLkINvliAH3yxBDr5Zghx8swQ5+GYJcvDNEuTgmyXIwTdLkINvliAH\n3yxBDr5Zghx8swQ5+GYJcvDNEuTgmyXIwTdLkINvliAH3yxBDr5Zghx8swTV/SYdG78qX2Q8el1r\nW09PT0t7su7gEd8sQQ6+WYIcfLMEOfhmCfLBvaNI8UCdpFz93HPPVd1n7969ufrBBx8svS/rPh7x\nzRJUN/iSzpC0XtIWSZsl3ZttnyxpraRt2e9JrW/XzMrQyIh/AHggIs4BLgG+K+kc4CFgXUTMAtZl\ntZmNA3Xn+BHxIfBhdvkzSVuB04FrgDnZzVYCrwHfb0mXVooFCxZUbbv55ps70Il12hHN8SX1AxcC\nG4C+7I8CwB6gr9TOzKxlGg6+pJOBnwHfi4hPR14XlcPJ1eeDVu63SNKgpMHh4eGmmjWzcjQUfEnH\nUgn9TyLi59nmjyRNy66fBgzVum9ELI+IgYgY6O3tLaNnM2tS3Tm+Km8GPwNsjYgfjbjqJWAB8MPs\n9+qWdGgNK75vX1TrQzobNmyoe5sj2YeND42cwHMpcCvwa0nvZtv+mkrgX5S0EPgdcFNrWjSzsjVy\nVP8/gdH+zF9Rbjtm1g4+c88sQT5XPyHHHFP9d3727Nm5+quvvsrVxTm95/hHB4/4Zgly8M0S5OCb\nJchz/DYpvj9enEsPDeXPf9qzZ0/VYzz22GO5+uOPP87Va9asydUTJuSf3uI+AebNm5eri2dXTp06\nteo+Nv55xDdLkINvliAH3yxBDr5ZgnxwrwH1vpHm4MGDVfcpHlh79dVXc/Xdd9+dq88+++xcvWzZ\nsqrHXLFiRa6eOHHiYfsqnmxT6wSe4mN88MEHubqvz8ssHI084pslyME3S5CDb5Ygz/EbUJw7f/bZ\nZ7n69ttvr7rPjh07cvWtt96aqx9//PFcffXVVx92n1B7jj5SvQ/Q1Lq+uG3btm25+sILLzzsY9r4\n5BHfLEEOvlmCHHyzBHmOT/05/OLFi3P1xo0bc/WSJUuqHnPOnDm5+qKLLsrVxUUu9+/fn6t7enpG\nb7hEJ554Yq7eunVrrq53boCNTx7xzRLk4JslyME3S5Dn+FTPW7ds2ZKri+9lP/nkk7m61nvumzdv\nztXF9+mL3ypUnNPX+rqx4qIYZcy3i48xY8aM0vdh3ccjvlmCHHyzBDn4ZgnyHJ/qOfp5552Xqz/9\nNPet4Bw4cCBXFz97DzBt2rTD3qc4py+eG/DGG29UPeb9999fta1Zxx9/fK4uLvLpL9E8OnnEN0uQ\ng2+WIAffLEEOvlmCfHCP6gNUJ510Uq6+6qqrcnW9A161rFq1Klc//fTTh93n66+/XvUYDzzwwBHv\nd6RafRe3TZkyJVf74N3RySO+WYLqBl/SREkbJW2StFnSD7LtZ0raIGm7pBckHdf6ds2sDI2M+H8A\nLo+I84ELgLmSLgGWAssiYibwCbCwdW2aWZnqzvGjMgn8PCuPzX4CuBz4y2z7SuDvgH8sv8Xu08i8\nd9KkSbn65JNPztXFxT6KX8px2mmnVT1m8dtui4tvjmXRjOJCHJdddtlhH6Pel4vU4uME3aehOb6k\nHknvAkPAWuC3wL6IOHQ62i7g9Na0aGZlayj4EXEwIi4ApgMXA7Mb3YGkRZIGJQ3W+qipmbXfER3V\nj4h9wHrg68Cpkg5NFaYDu0e5z/KIGIiIgeJn0M2sM+rO8SX1AvsjYp+kE4ArqRzYWw/cADwPLABW\nt7LR8aY4973rrrty9dKlS3P1jTfemKuvvfbaqsd8+OGHc/VTTz2Vq3fvzv/tLR4DaGQBz+KHiT7/\n/PNc/eyzz+bq6667ruoxiucCFD/EVO+4QbsWGk1ZIyfwTANWSuqh8grhxYhYI2kL8LykvwfeAZ5p\nYZ9mVqJGjur/Cqj6HqWI2EFlvm9m44zP3DNLkM/VH4Pi++mPPvpo1W3OOuusXP3yyy/n6uJCG2++\n+WaurjXHv+OOO3L1I488cti+xjJX/vLLL3N18cs+b7vttlz9yiuv1H2ML774IlefcsopubrWl45a\na3nEN0uQg2+WIAffLEGe45egr6+valtxbjx//vxcXZx/F+fntRTfly++Hz6WOf3EiRNz9bJly3L1\nueeem6uvv/76XF1rodHi+/L1PlNg7ecR3yxBDr5Zghx8swQ5+GYJ8sG9MSgenLrzzjvr3qfWQbCR\nOvXBlOLJNGvXrs3VxYVGi33WWmSj3sIbXpij8zzimyXIwTdLkINvliDP8cfgaFooYubMmbl606ZN\nufq+++7L1Z6fHx084pslyME3S5CDb5Ygz/ETd8IJJ+Tqe+65J1dPnTq1ne1Ym3jEN0uQg2+WIAff\nLEGe4yeu+L78E0880aFOrJ084pslyME3S5CDb5Ygz/ET53Pv0+QR3yxBDr5Zghx8swQ5+GYJcvDN\nEuTgmyWo4eBL6pH0jqQ1WX2mpA2Stkt6QdJxrWvTzMp0JCP+vcDWEfVSYFlEzAQ+ARaW2ZiZtU5D\nwZc0HfgL4OmsFnA58C/ZTVYC81rRoJmVr9ER/wlgMXDou5y/BuyLiANZvQs4veTezKxF6gZf0reA\noYh4eyw7kLRI0qCkweHh4bE8hJmVrJER/1Lg25J2As9TeYn/Y+BUSYfO9Z8O7K5154hYHhEDETHQ\n29tbQstm1qy6wY+IJRExPSL6gVuAVyPiO8B64IbsZguA1S3r0sxK1cz7+N8H7pe0ncqc/5lyWjKz\nVjuij+VGxGvAa9nlHcDF5bdkZq3mM/fMEuTgmyXIwTdLkINvliAH3yxBDr5Zghx8swQ5+GYJcvDN\nEuTgmyXIwTdLkINvliAH3yxBDr5Zghx8swQ5+GYJcvDNEuTgmyXIwTdLkINvliAH3yxBDr5Zghx8\nswQ5+GYJcvDNEuTgmyXIwTdLkINvliAH3yxBDr5Zghx8swQ5+GYJcvDNEjShkRtJ2gl8BhwEDkTE\ngKTJwAtAP7ATuCkiPmlNm2ZWpiMZ8S+LiAsiYiCrHwLWRcQsYF1Wm9k40MxL/WuAldnllcC85tsx\ns3ZoNPgB/JuktyUtyrb1RcSH2eU9QF/p3ZlZSzQ0xwe+ERG7JU0F1kr6n5FXRkRIilp3zP5QLAKY\nMWNGU82aWTkaGvEjYnf2ewhYBVwMfCRpGkD2e2iU+y6PiIGIGOjt7S2nazNrSt3gSzpJ0h8dugxc\nBbwHvAQsyG62AFjdqibNrFyNvNTvA1ZJOnT7f4qIf5X0FvCipIXA74CbWtemmZWpbvAjYgdwfo3t\nHwNXtKIpM2stn7lnliBF1DwY35qdScNUpgVTgL1t2/HYuc/yjIceYfz3+ccRUfcoeluD//87lQZH\nnAHYtdxnecZDj5BOn36pb5YgB98sQZ0K/vIO7fdIuc/yjIceIZE+OzLHN7PO8kt9swS1NfiS5kp6\nX9J2SV31+X1JKyQNSXpvxLbJktZK2pb9ntThHs+QtF7SFkmbJd3bpX1OlLRR0qaszx9k28+UtCF7\n/l+QdFwn+8x66pH0jqQ1XdzjTkm/lvSupMFsW1PPeduCL6kH+AfgauAcYL6kc9q1/wY8B8wtbOu2\nxUYOAA9ExDnAJcB3s3/DbuvzD8DlEXE+cAEwV9IlwFJgWUTMBD4BFnawx0PuBbaOqLuxRyh7IZyI\naMsP8HXglyPqJcCSdu2/wR77gfdG1O8D07LL04D3O91jod/VwJXd3CdwIvDfwJ9ROeFkQq3/Dx3q\nbXoWmsuBNYC6rcesj53AlMK2pp7zdr7UPx34/Yh6V7atm3XtYiOS+oELgQ10YZ/ZS+h3qXxcey3w\nW2BfRBzIbtINz/8TwGLgq6z+Gt3XI7RgIZxGF+JIXsToi420m6STgZ8B34uIT7NPTgLd02dEHAQu\nkHQqlTUcZne4pRxJ3wKGIuJtSXM63U8dY14IZzTtHPF3A2eMqKdn27pZQ4uNtJOkY6mE/icR8fNs\nc9f1eUhE7APWU3nZfKqkQ4NNp5//S4FvZytIP0/l5f6P6a4egeYWwhlNO4P/FjArO2p6HHALlcU8\nullXLTaiytD+DLA1In404qpu67M3G+mRdAKV4xBbqfwBuCG7WUf7jIglETE9Ivqp/F98NSK+Qxf1\nCC1cCKfNBym+CfyGynzvbzp90KTQ20+BD4H9VOZ2C6nM+dYB24B/ByZ3uMdvUJnv/Qp4N/v5Zhf2\n+afAO1mf7wF/m20/C9gIbAf+GTi+08971tccYE039pj1syn72XwoN80+5z5zzyxBPnPPLEEOvlmC\nHHyzBDn4Zgly8M0S5OCbJcjBN0uQg2+WoP8DhTkGdfqcGrsAAAAASUVORK5CYII=\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x133c7048>"
+       "<matplotlib.figure.Figure at 0xdfee390>"
       ]
      },
      "metadata": {},
