--- a/python_archive/ipython/hangeulDetection4_deepModel_aa.ipynb
+++ b/python_archive/ipython/hangeulDetection4_deepModel_aa.ipynb
@@ -399,27 +399,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2897\n",
-      "Label:  [11]\n",
-      "Prediction:  [11]\n"
+     "ename": "NameError",
+     "evalue": "name 'test_images' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-d3d633c2a156>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m#----------------------------------------------\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;31m# 임의의 얼굴 하나를 출력한 다음 맞혀보는 코드\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mtest_num_examples\u001b[0m \u001b[1;33m,\u001b[0m \u001b[0mbin2\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtest_images\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[0mr\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mrandom\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrandint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtest_num_examples\u001b[0m \u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mr\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'test_images' is not defined"
      ]
-    },
-    {
-     "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAP4AAAD8CAYAAABXXhlaAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAD+VJREFUeJzt3W2MleWdx/HvTx4UnwLIiITBHTYQG9RFk4na2Bc+LAZq\nU3xhSG3d8IKEN5pYt2tXd6Npk11TfaHti00TjEZMatGmGAw2dpHVbNZskLFqq7IWJFMLPjC6oBWf\nAP/74tx0575mhnNmzn2fOdPr90nInP99Hu7/PPy4z3Wd+1xHEYGZ5eWkyW7AzDrPwTfLkINvliEH\n3yxDDr5Zhhx8sww5+GYZcvDNMtRW8CWtlPSGpD2Sbq+qKTOrlyZ65p6kacDvgRXAPmAncENEvD7W\nfebNmxd9fX0T2p+ZNTc4OMj777+vZreb3sY+LgH2RMReAEmbgNXAmMHv6+tjYGCgjV2OlP7HJTX9\nns3+YvX397d0u3ae6i8E/jis3ldsK5G0XtKApIGhoaE2dmdmVal9ci8iNkREf0T09/T01L07M2tB\nO0/19wOLhtW9xbaO8lN7s/Fr54i/E1gqabGkmcC3gCeracvM6jThI35EHJV0M/BrYBrwUES8Vlln\nZlabdp7qExG/An5VUS9m1iE+c88sQw6+WYYcfLMMOfhmGXLwzTLk4JtlyME3y5CDb5YhB98sQw6+\nWYYcfLMMOfhmGXLwzTLk4JtlyME3y5CDb5YhB98sQw6+WYYcfLMMOfhmGXLwzTLk4JtlyME3y5CD\nb5YhB98sQw6+WYYcfLMMOfhmGXLwzTLk4JtlyME3y5CDb5YhB98sQ02DL+khSQckvTps21xJ2yTt\nLr7OqbdNM6tSK0f8h4GVybbbge0RsRTYXtRmNkU0DX5E/Cfwv8nm1cDG4vJG4LqK+zKzGk10jD8/\nIt4pLr8LzB/rhpLWSxqQNDA0NDTB3ZlZldqe3IuIAOIE12+IiP6I6O/p6Wl3d2ZWgYkG/z1JCwCK\nrweqa8nM6jbR4D8JrC0urwW2VNOOmXVCKy/n/Rz4b+A8SfskrQN+BKyQtBv426I2sylierMbRMQN\nY1x1dcW9mFmH+Mw9sww5+GYZcvDNMuTgm2XIwTfLkINvliEH3yxDDr5Zhhx8sww5+GYZcvDNMuTg\nm2XIwTfLkINvliEH3yxDDr5Zhhx8sww5+GYZcvDNMuTgm2XIwTfLkINvliEH3yxDDr5Zhhx8sww5\n+GYZcvDNMuTgm2XIwTfLkINvliEH3yxDDr5ZhpoGX9IiSc9Kel3Sa5JuKbbPlbRN0u7i65z62zWz\nKrRyxD8KfC8ilgGXATdJWgbcDmyPiKXA9qI2symgafAj4p2I+E1x+U/ALmAhsBrYWNxsI3BdXU2a\nWbXGNcaX1AdcDOwA5kfEO8VV7wLzK+3MzGrTcvAlnQ78EvhuRHw0/LqICCDGuN96SQOSBoaGhtpq\n1syq0VLwJc2gEfqfRcTmYvN7khYU1y8ADox234jYEBH9EdHf09NTRc9m1qZWZvUFPAjsioj7hl31\nJLC2uLwW2FJ9e2ZWh+kt3OZy4O+A30l6udj2T8CPgMclrQP+AKypp0Uzq1rT4EfEfwEa4+qrq23H\nzDrBZ+6ZZcjBN8uQg2+WIQffLEMOvlmGHHyzDDn4Zhly8M0y5OCbZcjBN8tQK+fqm41L413a/+/Y\nsWOl+s033yzVS5YsKdXTpk2rpzH7Mx/xzTLk4JtlyME3y5DH+Fa7dMy+fPnyUv3ZZ591sh3DR3yz\nLDn4Zhly8M0y5DG+Va6xPuvYjhw5UqrT1/2b3d/a5yO+WYYcfLMMOfhmGfIYfwKqGJOmj5H6Sxrn\nHj16tFSfeeaZJ7x+xowZtfeUOx/xzTLk4JtlyME3y5DH+BV4++23R2w755xzSnU6pv/yyy9P+Jij\nvSe92dxC+r736dPLv97R9pk+xkknlY8F6T4//fTTUj1r1qymj5l+L+ljpn1a/XzEN8uQg2+WIQff\nLEMOvlmGPKvSgnQy6qmnnirVq1evHnGf9CSVU045pVSnE20nn3xyqT548OCIx/ziiy9KdTppltZr\n1qwp1TNnzhzxmOn3li6EuXfv3lK9efPmUp0uqjGa9HtNJyGt83zEN8tQ0+BLOkXSC5JekfSapB8W\n2xdL2iFpj6THJI08nJhZV2rliP85cFVELAcuAlZKugy4B7g/IpYAB4F19bVpZlVqOsaPxiDw46Kc\nUfwL4Crg28X2jcAPgJ9W32L3WbVqVak+fPjwiNuk49pTTz21VH/88ccnvD49kWY09913X6keGBgo\n1Q888MAJe4LmJ898/vnnpTqdJxjtMdPe07mH9OflhTg6r6UxvqRpkl4GDgDbgDeBQxFx/G1V+4CF\n9bRoZlVrKfgRcSwiLgJ6gUuAr7S6A0nrJQ1IGhgaGppgm2ZWpXHN6kfEIeBZ4KvAbEnHnyf2AvvH\nuM+GiOiPiP6enp62mjWzajQd40vqAY5ExCFJs4AVNCb2ngWuBzYBa4EtdTY6mZq9kSV9jb4Vp59+\neqlOx7mjLdSRbnv++edL9aJFi0r1vn37SnU6jwBw1llnler0e03PL0hNZDzuhTYmXysn8CwANkqa\nRuMZwuMRsVXS68AmSf8CvAQ8WGOfZlahVmb1fwtcPMr2vTTG+2Y2xfjMPbMM+Vz9CajjdeaJPGa6\nKMacOXNK9aZNm0r1c889N+Ix0vcd1CF9rb+VcxSsXv4NmGXIwTfLkINvliGP8aeQ9HX8Q4cOlepr\nrrmmVJ9xxhml+oknnqinsSaavR/fY/7O80/cLEMOvlmGHHyzDDn4Zhny5N4Ukk6CffDBB6U6Xfhy\n9+7dpfrCCy+sp7Em0sU+0k/HTesqPlmn2ScXjTahmNMCID7im2XIwTfLkINvliGP8aeQdNz60Ucf\nlep0oY1t27aV6nXrRi6E3OwTdiditEVETqTZJ/TCyE8kfvTRR0t1Ot/R7MNH7r777hH7yGmBEB/x\nzTLk4JtlyME3y5DH+FNI+jpzWqevVd95552leufOnSMeMx37VqFZX+kHit54442lOl1EFOD8888v\n1XfddVepvuCCC0r1aaeddsIecn9jUN7fvVmmHHyzDDn4ZhnyGH8KSV/fnjt3bqlOP+AyHWvPnj17\n3PtIX+dPjfa6f7MPB/nwww9LdfoegwcfHPkRDemHloz3vPo65jKmMh/xzTLk4JtlyME3y5DH+DVp\n9rpxs/eLjzYmTd+3vnjx4lL9yCOPlOpZs2aV6muvvXbEY6bntKfzBOmHZj788MOl+tJLLx3xmOn4\nO/1e0k9Nvu2220p17q+xd4J/wmYZcvDNMuTgm2XIY/wKjPb+8XTMvmLFilJ9+PDhUj04OFiqP/nk\nkxGPmY5909fYn3nmmVJ97733lup0TgDgyiuvLNXpOe5Hjhwp1RNZly79+fT29o77MaxaPuKbZcjB\nN8tQy8GXNE3SS5K2FvViSTsk7ZH0mKSZ9bVpZlUazxH/FmDXsPoe4P6IWAIcBEYu6GZmXamlyT1J\nvcC1wL8Cf6/GDM9VwLeLm2wEfgD8tIYeu95oE17pm1eefvrpUp0uhHneeeeV6vRNKQBvvfVWqU4n\n684+++xSXcWJMHUsQLls2bLKH9PGp9W/jB8D3weOT1WfBRyKiOOnku0DFlbcm5nVpGnwJX0DOBAR\nL05kB5LWSxqQNDA0NDSRhzCzirVyxL8c+KakQWATjaf4PwFmSzr+fLYX2D/anSNiQ0T0R0R/eo62\nmU2OpmP8iLgDuANA0hXAP0TEdyT9Ariexn8Ga4EtNfY55aVj/lWrVpXq9CSX0eYNFi4sj6bSk4S6\n9UMf0+9t3rx5pXr//vIxY9GiRbX3lLt2Zn/+kcZE3x4aY/6Ry6aYWVca1ym7EfEc8FxxeS9wSfUt\nmVndfOaeWYb8Jp0OaTb+nsj4fKouWJEu7rF58+ZSffPNN4+4jxfLrNbU/Msxs7Y4+GYZcvDNMuQx\nvtUunYtIF/+49dZbS/VNN9004jFaOc/BWucjvlmGHHyzDDn4ZhnyGN86Ll14dMGCBU3v4zF9tXzE\nN8uQg2+WIQffLEMOvlmGPLlnHZee0LN9+/ZS7Ym8+vmIb5YhB98sQw6+WYY8xreO8xh+8vmIb5Yh\nB98sQw6+WYYcfLMMOfhmGXLwzTLk4JtlyME3y5CDb5YhB98sQw6+WYYcfLMMOfhmGXLwzTLU0tty\nJQ0CfwKOAUcjol/SXOAxoA8YBNZExMF62jSzKo3niH9lRFwUEf1FfTuwPSKWAtuL2symgHae6q8G\nNhaXNwLXtd+OmXVCq8EP4N8lvShpfbFtfkS8U1x+F5hfeXdmVotWl976WkTsl3Q2sE3S/wy/MiJC\nUox2x+I/ivUA5557blvNmlk1WjriR8T+4usB4AngEuA9SQsAiq8Hxrjvhojoj4j+np6earo2s7Y0\nDb6k0ySdcfwycA3wKvAksLa42VpgS11Nmlm1WnmqPx94olgZdTrwaEQ8LWkn8LikdcAfgDX1tWlm\nVWoa/IjYCywfZfsHwNV1NGVm9fKZe2YZUsSok/H17EwaojEsmAe837EdT5z7rM5U6BGmfp9/FRFN\nZ9E7Gvw/71QaGHYGYNdyn9WZCj1CPn36qb5Zhhx8swxNVvA3TNJ+x8t9Vmcq9AiZ9DkpY3wzm1x+\nqm+WoY4GX9JKSW9I2iOpq96/L+khSQckvTps21xJ2yTtLr7OmeQeF0l6VtLrkl6TdEuX9nmKpBck\nvVL0+cNi+2JJO4rf/2OSZk5mn0VP0yS9JGlrF/c4KOl3kl6WNFBsa+t33rHgS5oG/BuwClgG3CBp\nWaf234KHgZXJtm5bbOQo8L2IWAZcBtxU/Ay7rc/PgasiYjlwEbBS0mXAPcD9EbEEOAism8Qej7sF\n2DWs7sYeoeqFcCKiI/+ArwK/HlbfAdzRqf232GMf8Oqw+g1gQXF5AfDGZPeY9LsFWNHNfQKnAr8B\nLqVxwsn00f4eJqm33iI0VwFbAXVbj0Ufg8C8ZFtbv/NOPtVfCPxxWL2v2NbNunaxEUl9wMXADrqw\nz+Ip9Ms03q69DXgTOBQRR4ubdMPv/8fA94Evi/osuq9HqGEhnFYX4shexNiLjXSapNOBXwLfjYiP\nindOAt3TZ0QcAy6SNJvGGg5fmeSWSiR9AzgQES9KumKy+2liwgvhjKWTR/z9wKJhdW+xrZu1tNhI\nJ0maQSP0P4uIzcXmruvzuIg4BDxL42nzbEnHDzaT/fu/HPhmsYL0JhpP939Cd/UItLcQzlg6Gfyd\nwNJi1nQm8C0ai3l0s65abESNQ/uDwK6IuG/YVd3WZ09xpEfSLBrzELto/AdwfXGzSe0zIu6IiN6I\n6KPxt/gfEfEduqhHqHEhnA5PUnwd+D2N8d4/T/akSdLbz4F3gCM0xnbraIz5tgO7gWeAuZPc49do\njPd+C7xc/Pt6F/b5N8BLRZ+vAncV2/8aeAHYA/wCOHmyf+9FX1cAW7uxx6KfV4p/rx3PTbu/c5+5\nZ5Yhn7lnliEH3yxDDr5Zhhx8sww5+GYZcvDNMuTgm2XIwTfL0P8BH4FAxTgDcpYAAAAASUVORK5C\nYII=\n",
-      "text/plain": [
-       "<matplotlib.figure.Figure at 0xca52080>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
@@ -471,7 +463,7 @@
     "\n",
     "# train Label 데이터를 [1 x 100] 의 행렬로 표현한다\n",
     "#           예를 들어 3이면 [0,0,1,0,.....,0] 과 같이 설정한다\n",
-    "mod_labels  = np.array(np.zeros(254800).reshape(19600,13))\n",
+    "mod_labels  = np.array(np.zeros(274400).reshape(19600,14))\n",
     "for num in range(0,19600):\n",
     "    mod_labels[num][int(mlabels[num]) - 1] = 1"
    ]
